package diary;

public interface Attributable {
    String getAuthor();
}
