package diary;

public interface Timestampable {
    long getTimestamp();
}
